# fizzbuzzfib

./: README.md  fizzbuzzfib.cabal  stack.yaml  stack.yaml.docker
app/: Main.hs
src/: FibError.hs  FizzBuzz.hs  FizzError.hs  FizzTypes.hs  FizzUtils.hs  Input.hs
test/: Spec.hs
