name:                fizzbuzzfib
version:             0.1.0.0
synopsis:            Based off of 
description:         Please see README.md
homepage:            http://github.com/mlitchard/fizzbuzzfib
license:             BSD3
license-file:        LICENSE
author:              Michael Litchard
maintainer:          Michael Litchard
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FizzBuzz
                      ,Input
                      ,FizzTypes
                      ,FizzUtils

  build-depends:       base >= 4.7 && < 5
                     , primes == 0.2.1.0
                     , semigroups == 0.17.0.1
                     , MissingH   == 1.3.0.1
  default-language:    Haskell2010

executable fizzbuzzfib-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fizzbuzzfib
  default-language:    Haskell2010

--executable fizzbuzz-utils-exe
--  hs-source-dirs:      app
--  main-is:             Utils.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , fizzbuzzfib

--  default-language:    Haskell2010

test-suite fizzbuzzfib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base == 4.8.1.0
                     , fizzbuzzfib
                     , QuickCheck == 2.8.1
                     , hspec == 2.2.1
                     , primes == 0.2.1.0
                     , MissingH == 1.3.0.1
  ghc-options:         -fhpc -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mlitchard/fizzbuzzlib
